set split method for personal account

--- a/emacs.org
+++ b/emacs.org
@@ -2002,7 +2002,7 @@ This also sets [[http://www.gnu.org/software/emacs/manual/html_node/gnus/Group-P
          (nnir-search-engine imap)
          (nnimap-list-pattern ("INBOX"))
          (nnimap-inbox ("INBOX"))
-         (nnimap-inbox ("INBOX"))
+         (nnimap-split-methods 'nnimap-split-fancy)
          (nnimap-split-fancy (|
                                (: gnus-registry-split-fancy-with-parent)
                                (from ".*@facebookmail.com.*" "INBOX.social")
