more filtering in gnus work email

--- a/emacs.org
+++ b/emacs.org
@@ -1988,11 +1988,14 @@ This also sets [[http://www.gnu.org/software/emacs/manual/html_node/gnus/Group-P
         (nnimap-split-methods 'nnimap-split-fancy)
         (nnimap-split-fancy (|
                               (: gnus-registry-split-fancy-with-parent)
-                              (from ".*Internet2.*" "ops.internet2")
-                              (from ".*NTS Nagios.*" "ops.nts")
-                              (from "rancid@" "ops.rancid")
-                              ("Subject" ".*rkhunter.*" "ops.ids")
-                              ("Subject" ".*AIDE.*" "ops.ids")
+                              (from ".*Internet2.*"       "ops.internet2")
+                              (from ".*NTS Nagios.*"      "ops.nts")
+                              (from "rancid@"             "ops.rancid")
+                              ("Subject" ".*rkhunter.*"   "ops.ids")
+                              ("Subject" ".*AIDE.*"       "ops.ids")
+                              (any ".*hunterfiber.com.*"     "vendor.hunter")
+                              (any ".*huntertelephone.com.*" "vendor.hunter") 
+                              (any ".*comcast.com.*"         "vendor.comcast")
                               "INBOX")))
        (nnimap "personal"
          (nnimap-address ,sf/nnimap-personal-address)
