--- a/emacs.org
+++ b/emacs.org
@@ -943,6 +943,7 @@ Some possibly useful references:
 #+BEGIN_SRC emacs-lisp
   (use-package swiper
     :ensure swiper
+    :diminish ivy-mode
     :init
     (progn
       (use-package counsel :ensure t)
@@ -1769,7 +1770,7 @@ Define various keybindings.
       (add-to-list 'auto-mode-alist '("notmuch-raw-id" . markdown-mode))
       (add-hook 'notmuch-hello-mode-hook 'sf/nolinum)
       (add-hook 'notmuch-show-hook '(lambda () (setq show-trailing-whitespace nil)))
-      (dolist (mode '(notmuch-search notmuch-show notmuch-help))
+      (dolist (mode '(notmuch-search notmuch-show notmuch-help notmuch-message-mode))
         (evil-set-initial-state mode 'emacs))
       )
     :config
