switch hydra app-selector to mu4e

--- a/emacs.org
+++ b/emacs.org
@@ -1530,7 +1530,7 @@ Define a hydra to start/switch to applications or trigger miscellaneous actions.
     (defhydra hydra-app-selector (:color blue
                                    :columns 5)
       "Action"
-      ("e" notmuch "email")
+      ("e" mu4e "email")
       ("f" elfeed "elfeed")
       ("t" twit "twitter")
       ("j" jabber-connect-all "jabber")
