--- a/emacs.org
+++ b/emacs.org
@@ -1482,11 +1482,11 @@ jumpy.  There are a couple references:
 )
 #+END_SRC
 
-Autoselect the window with the mouse pointer.  This is effectively
-/focus-follows-mouse/, but for windows in an Emacs frame.
++Autoselect the window with the mouse pointer.  This is effectively
+/focus-follows-mouse/, but for windows in an Emacs frame.+
 
 #+BEGIN_SRC emacs-lisp
-(setq mouse-autoselect-window t)
+(setq mouse-autoselect-window nil)
 #+END_SRC
 
 **** General 
@@ -1817,70 +1817,92 @@ The following function facilitates sending email from multiple accounts.
         (mapc #'(lambda (var)
                   (set (car var) (cadr var)))
           account-vars)
-        (error "No email account found"))))
+        (error "No email account found")
+        )
+      )
+    )
+  (defun mu4e-action-show-thread (msg)
+    "Show all messages that are in the same thread as the message
+  at point."
+    (let ((msgid (mu4e-message-field msg :message-id)))
+      (when msgid
+        (let ((mu4e-headers-show-threads t)
+               (mu4e-headers-include-related t))
+          (mu4e-headers-search
+            (format "msgid:%s" msgid)
+            )
+          )
+        )
+      )
+    )
 #+END_SRC
 
 What follows is the bulk of the configuration for mu4e.
 
 #+BEGIN_SRC emacs-lisp
-    (use-package mu4e
-      :config
-      (progn
-        (require 'mu4e-contrib)
-        (setq
-          mu4e-attachment-dir "~/Downloads"
-          mu4e-html2text-command 'mu4e-shr2text
-          mu4e-use-fancy-chars t
-          mu4e-bookmarks '(
-                            ("flag:unread AND NOT flag:trashed" "Unread messages" ?u)
-                            ("date:today..now" "Today's messages" ?t)
-                            ("date:7d..now" "Last 7 days" ?w)
-                            ("flag:flagged" "Flagged" ?f)
-                            ("mime:text/calendar" "Meeting invites" ?c)
-                            ("mime:image/*" "Messages with images" ?p)
-                            )
-          mu4e-view-actions '(
+  (use-package mu4e
+    :config
+    (progn
+      (require 'mu4e-contrib)
+      (setq
+        mu4e-attachment-dir "~/Downloads"
+        mu4e-html2text-command 'mu4e-shr2text
+        mu4e-use-fancy-chars t
+        mu4e-bookmarks '(
+                          ("flag:unread AND NOT flag:trashed" "Unread messages" ?u)
+                          ("date:today..now" "Today's messages" ?t)
+                          ("date:7d..now" "Last 7 days" ?w)
+                          ("flag:flagged" "Flagged" ?f)
+                          ("mime:text/calendar" "Meeting invites" ?c)
+                          ("mime:image/*" "Messages with images" ?p)
+                          )
+        mu4e-headers-actions '(
                                ("capture message" . mu4e-action-capture-message)
-                               ("tag message"     . mu4e-action-retag-message)
-                               ("view as pdf"     . mu4e-action-view-as-pdf)
+                               ("show thread"     . mu4e-action-show-thread)
                                )
-          mu4e-maildir (expand-file-name "~/.mail")
-          mu4e-compose-signature-auto-include t
-          mu4e-get-mail-command "offlineimap"
-          mu4e-update-interval 300              ;; check for updates every 5 min
-          mu4e-view-scroll-to-next nil          ;; do not advance to next message when scolling
-          mu4e-sent-folder   "/Work/Sent"       ;; folder for sent messages
-          mu4e-drafts-folder "/Work/Drafts"     ;; unfinished messages
-          mu4e-trash-folder  "/Work/Trash"      ;; trashed messages
-          mu4e-refile-folder "/Work/Archive"    ;; saved messages
-          )
-        (add-hook 'mu4e-compose-pre-hook 'my-mu4e-set-account)
-        (dolist (mode '(mu4e-main-mode mu4e-compose-mode mu4e-headers-mode mu4e-view-mode))
-          (evil-set-initial-state mode 'emacs))
-        (defun sf/mu4e-forward-as-attachment ()
-          "Forward message as an attachment"
-          (interactive)
-          (let ((subject (plist-get (mu4e-message-at-point t) :subject))
-                 (path (plist-get (mu4e-message-at-point t) :path)))
-            (mu4e-compose 'new)
-            (unless (file-exists-p path)
-              (mu4e-warn "Message file not found"))
-            (mml-attach-file
-              path
-              "message/rfc822"
-              (or subject "No subject")
-              "attachment")
-            (when (message-goto-subject)
-              (message-delete-line))
-            (message-add-header (concat "Subject: " mu4e~draft-forward-prefix subject))
-            )
-          )
-        (define-key mu4e-headers-mode-map (kbd "f") 'sf/mu4e-forward-as-attachment)
-        (define-key mu4e-headers-mode-map (kbd "y") 'mu4e-headers-mark-for-refile)
-        (define-key mu4e-view-mode-map (kbd "f") 'sf/mu4e-forward-as-attachment)
-        (define-key mu4e-view-mode-map (kbd "y") 'mu4e-view-mark-for-refile)
+        mu4e-view-actions '(
+                             ("capture message" . mu4e-action-capture-message)
+                             ("tag message"     . mu4e-action-retag-message)
+                             ("view as pdf"     . mu4e-action-view-as-pdf)
+                             ("show thread"     . mu4e-action-show-thread)
+                             )
+        mu4e-maildir (expand-file-name "~/.mail")
+        mu4e-compose-signature-auto-include t
+        mu4e-get-mail-command "offlineimap"
+        mu4e-update-interval 300              ;; check for updates every 5 min
+        mu4e-view-scroll-to-next nil          ;; do not advance to next message when scolling
+        mu4e-sent-folder   "/Work/Sent"       ;; folder for sent messages
+        mu4e-drafts-folder "/Work/Drafts"     ;; unfinished messages
+        mu4e-trash-folder  "/Work/Trash"      ;; trashed messages
+        mu4e-refile-folder "/Work/Archive"    ;; saved messages
         )
+      (add-hook 'mu4e-compose-pre-hook 'my-mu4e-set-account)
+      (dolist (mode '(mu4e-main-mode mu4e-compose-mode mu4e-headers-mode mu4e-view-mode))
+        (evil-set-initial-state mode 'emacs))
+      (defun sf/mu4e-forward-as-attachment ()
+        "Forward message as an attachment"
+        (interactive)
+        (let ((subject (plist-get (mu4e-message-at-point t) :subject))
+               (path (plist-get (mu4e-message-at-point t) :path)))
+          (mu4e-compose 'new)
+          (unless (file-exists-p path)
+            (mu4e-warn "Message file not found"))
+          (mml-attach-file
+            path
+            "message/rfc822"
+            (or subject "No subject")
+            "attachment")
+          (when (message-goto-subject)
+            (message-delete-line))
+          (message-add-header (concat "Subject: " mu4e~draft-forward-prefix subject))
+          )
+        )
+      (define-key mu4e-headers-mode-map (kbd "f") 'sf/mu4e-forward-as-attachment)
+      (define-key mu4e-headers-mode-map (kbd "y") 'mu4e-headers-mark-for-refile)
+      (define-key mu4e-view-mode-map (kbd "f") 'sf/mu4e-forward-as-attachment)
+      (define-key mu4e-view-mode-map (kbd "y") 'mu4e-view-mark-for-refile)
       )
+    )
 #+END_SRC
 
 *** notmuch
